--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.funktionale</groupId>
+			<artifactId>funktionale-all</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
